--- a/lite/model_parser/CMakeLists.txt
+++ b/lite/model_parser/CMakeLists.txt
@@ -28,6 +28,7 @@ lite_cc_library(model_parser SRCS model_parser.cc DEPS
     target_wrapper_host
     compatible_pb
     memory
+    DEPS paddle_api
     CUDA_DEPS target_wrapper_cuda)
 lite_cc_test(test_compatible_pb SRCS compatible_pb_test.cc DEPS compatible_pb)
 
