[X86] Support X86 OpenBlas (WITH_MKL=OFF) (#4575)
* [X86] fix build cmake and softmax when mkl off, test=develop

* [X86] add x64 compile support on windows, test=develop

* address review comments, test=develop

--- a/lite/backends/x86/CMakeLists.txt
+++ b/lite/backends/x86/CMakeLists.txt
@@ -9,7 +9,9 @@ if (LITE_ON_MODEL_OPTIMIZE_TOOL)
     return()
 endif(LITE_ON_MODEL_OPTIMIZE_TOOL)
 lite_cc_library(dynamic_loader SRCS dynamic_loader.cc)
-lite_cc_library(dynload_mklml SRCS mklml.cc DEPS dynamic_loader mklml)
+if(WITH_MKL)
+    lite_cc_library(dynload_mklml SRCS mklml.cc DEPS dynamic_loader mklml)
+endif(WITH_MKL)
 lite_cc_library(x86_cpu_info SRCS cpu_info.cc)
 
 add_subdirectory(jit)
