--- a/lite/backends/x86/math/CMakeLists.txt
+++ b/lite/backends/x86/math/CMakeLists.txt
@@ -16,7 +16,11 @@ function(math_library TARGET)
     endif()
 
     list(LENGTH cc_srcs cc_srcs_len)
-    lite_cc_library(${TARGET} SRCS ${cc_srcs} DEPS ${math_library_DEPS} ${math_common_deps} eigen3 dynload_mklml)
+    if(WITH_MKL)
+        lite_cc_library(${TARGET} SRCS ${cc_srcs} DEPS ${math_library_DEPS} ${math_common_deps} eigen3 dynload_mklml)
+    else()
+        lite_cc_library(${TARGET} SRCS ${cc_srcs} DEPS ${math_library_DEPS} ${math_common_deps} eigen3)
+    endif()
 endfunction()
 
 # please add new math_library in alphabetical order
@@ -32,8 +36,13 @@ math_library(sampler)
 math_library(gru_compute DEPS activation_functions math_function)
 math_library(lstm_compute DEPS activation_functions)
 
-lite_cc_library(blas SRCS blas.cc DEPS cblas framework_proto eigen3 dynload_mklml)
-math_library(math_function DEPS blas dynload_mklml)
+if(WITH_MKL)
+    lite_cc_library(blas SRCS blas.cc DEPS cblas framework_proto eigen3 dynload_mklml)
+else()
+    lite_cc_library(blas SRCS blas.cc DEPS cblas framework_proto eigen3)
+endif()
+
+math_library(math_function DEPS blas)
 math_library(maxouting)
 math_library(pooling)
 math_library(selected_rows_functor DEPS selected_rows math_function blas)
@@ -51,7 +60,9 @@ math_library(vol2col)
 ## math_library(prelu)
 math_library(tree2col DEPS math_function)
 math_library(sequence_topk_avg_pooling)
-math_library(search_fc DEPS blas dynload_mklml)
+if(WITH_MKL)
+    math_library(search_fc DEPS blas dynload_mklml)
+endif()
 # cc_test(math_function_test SRCS math_function_test.cc DEPS math_function)
 # cc_test(selected_rows_functor_test SRCS selected_rows_functor_test.cc DEPS selected_rows_functor)
 # cc_test(im2col_test SRCS im2col_test.cc DEPS im2col)
