--- a/lite/tests/api/CMakeLists.txt
+++ b/lite/tests/api/CMakeLists.txt
@@ -48,9 +48,13 @@ if(LITE_WITH_ARM)
 endif()
 
 if(LITE_WITH_NPU)
-    lite_cc_test_with_model_and_data(test_mobilenetv1_fp32_huawei_kirin_npu MODEL mobilenet_v1 DATA ILSVRC2012_small)
-    lite_cc_test_with_model_and_data(test_mobilenetv2_fp32_huawei_kirin_npu MODEL mobilenet_v2_relu DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_inception_v4_fp32_huawei_kirin_npu MODEL inception_v4 DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v1_fp32_huawei_kirin_npu MODEL mobilenet_v1 DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v2_fp32_huawei_kirin_npu MODEL mobilenet_v2_relu DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v3_small_x1_0_fp32_huawei_kirin_npu MODEL mobilenet_v3_small_x1_0 DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v3_large_x1_0_fp32_huawei_kirin_npu MODEL mobilenet_v3_large_x1_0 DATA ILSVRC2012_small)
     lite_cc_test_with_model_and_data(test_resnet50_fp32_huawei_kirin_npu MODEL resnet50 DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_squeezenet_fp32_huawei_kirin_npu MODEL squeezenet DATA ILSVRC2012_small)
 endif()
 
 if(LITE_WITH_XPU AND NOT LITE_WITH_XTCL)
@@ -64,13 +68,13 @@ if(LITE_WITH_XPU AND NOT LITE_WITH_XTCL)
 endif()
 
 if(LITE_WITH_RKNPU)
-    lite_cc_test_with_model_and_data(test_mobilenetv1_int8_rockchip_npu MODEL mobilenet_v1_int8_for_rockchip_npu DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v1_int8_rockchip_npu MODEL mobilenet_v1_int8_for_rockchip_npu DATA ILSVRC2012_small)
 endif()
 
 if(LITE_WITH_APU)
-    lite_cc_test_with_model_and_data(test_mobilenetv1_int8_mediatek_apu MODEL mobilenet_v1_int8_for_mediatek_apu DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v1_int8_mediatek_apu MODEL mobilenet_v1_int8_for_mediatek_apu DATA ILSVRC2012_small)
 endif()
 
 if(LITE_WITH_IMAGINATION_NNA)
-    lite_cc_test_with_model_and_data(test_mobilenetv1_int8_imagination_nna MODEL mobilenet_v1_int8_for_imagination_nna DATA ILSVRC2012_small)
+    lite_cc_test_with_model_and_data(test_mobilenet_v1_int8_imagination_nna MODEL mobilenet_v1_int8_for_imagination_nna DATA ILSVRC2012_small)
 endif()
